k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: aws-devops-app
  namespace: devops-app

spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0

  selector:
    matchLabels:
      app: aws-devops-app

  template:
    metadata:
      labels:
        app: aws-devops-app

    spec:
      containers:
        - name: aws-devops-app

          image: 837868235145.dkr.ecr.ap-south-1.amazonaws.com/aws-devops-project-app:latest

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
