k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: aws-devops-service
  namespace: devops-app

spec:
  selector:
    app: aws-devops-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
